# chats2md

./: .gitignore  .prettierignore  LICENSE  README.md  esbuild.config.mjs  eslint.config.mjs  manifest  manifest.json  package-lock.json  package.json  playwright.config.ts  styles.css  tsconfig.eslint.json  tsconfig.json  version-bump.mjs
.beads/: metadata.json
docs/: release.md  releasing.md
e2e/: chats2md.spec.ts
py/: README.md  list_conversations.py  pyproject.toml  verify_cookie_necessity.py
py/src/chats2md/: __init__.py  cli.py  verify_cookie.py
scripts/: bootstrap-e2e.mjs  build-plugin-zip.mjs  e2e-vault-registry.mjs  setup-e2e.mjs  setup-sample-vault.mjs
src/: asset-storage.ts  chatgpt-api.ts  conversation-list-strategy.ts  conversation-utils.js  folder-suggest.ts  force-sync-ui.ts  full-sync.ts  import-modal.ts  main-asset-sync.ts  main-helpers.ts  main-rebuild.ts  main-session-account.ts  main-settings-pane-icon.ts  main-sync-modal.ts  main.ts  note-writer.ts  path-template.ts  progress-modal.ts  session-editor-modal.ts  settings.ts  sync-date-range.ts  sync-report.ts  sync-selection.ts  types.ts
test/: account-health-preflight.test.ts  account-health.test.ts  account-subset-selection.test.ts  asset-local-match.test.ts  asset-storage.test.ts  browse-delay.test.ts  chatgpt-api.test.ts  conversation-context.test.ts  conversation-list-fetch.test.ts  conversation-list-strategy.test.ts  conversation-utils.test.mjs  folder-cleanup.test.ts  full-sync-detail-fetch.test.ts  full-sync-finalize.test.ts  full-sync-helpers.test.ts  full-sync.test.ts  (+14 more)
(+63 files in other folders)
